third_party/rust/chromium_crates_io/vendor/cxx-1.0.124/tests/ui/impl_trait_for_type.stderr
error: unexpected impl, expected something like `impl UniquePtr<T> {}`
 --> tests/ui/impl_trait_for_type.rs:7:10
  |
7 |     impl UniquePtrTarget for S {}
  |          ^^^^^^^^^^^^^^^^^^^^^
